# devcontainer_python

./: pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
mymodules/: main.py
